tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_helios_codegen@pre-mem2reg@llvm21_5.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i64 @_hl.main.1(i64 %0) !dbg !3 {
alloca_block:
  %"0" = alloca i64, align 8
  %"2_0" = alloca i64, align 8
  %"4_0" = alloca i64, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i64 %0, ptr %"2_0", align 4
  %"2_01" = load i64, ptr %"2_0", align 4
  %___lazy_measure = call i64 @___lazy_measure(i64 %"2_01"), !dbg !8
  call void @___qfree(i64 %"2_01"), !dbg !8
  store i64 %___lazy_measure, ptr %"4_0", align 4, !dbg !8
  %"4_02" = load i64, ptr %"4_0", align 4
  store i64 %"4_02", ptr %"0", align 4
  %"03" = load i64, ptr %"0", align 4
  ret i64 %"03"
}

declare i64 @___lazy_measure(i64)

declare void @___qfree(i64)

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !7}
!7 = !DIBasicType(name: "i64", size: 64, encoding: DW_ATE_unsigned)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
