tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_helios_codegen@pre-mem2reg@llvm21_6.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal { i1, i64 } @_hl.main.1() {
alloca_block:
  %"0" = alloca { i1, i64 }, align 8
  %"4_0" = alloca { i1, i64 }, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %qalloc = call i64 @___qalloc()
  %not_max = icmp ne i64 %qalloc, -1
  br i1 %not_max, label %reset_bb, label %id_bb

reset_bb:                                         ; preds = %entry_block
  call void @___reset(i64 %qalloc)
  br label %id_bb

id_bb:                                            ; preds = %entry_block, %reset_bb
  %0 = insertvalue { i1, i64 } { i1 true, i64 poison }, i64 %qalloc, 1
  %1 = select i1 %not_max, { i1, i64 } %0, { i1, i64 } { i1 false, i64 poison }
  store { i1, i64 } %1, ptr %"4_0", align 4
  %"4_01" = load { i1, i64 }, ptr %"4_0", align 4
  store { i1, i64 } %"4_01", ptr %"0", align 4
  %"02" = load { i1, i64 }, ptr %"0", align 4
  ret { i1, i64 } %"02"
}

declare i64 @___qalloc()

declare void @___reset(i64)
