tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__qsystem__test__emit_qsystem_codegen@llvm21_2.snap
---
source: tket-qsystem/src/llvm/qsystem.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { i64, i64 } @_hl.main.1(i64 %0, i64 %1, double %2) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  call void @___rzz(i64 %0, i64 %1, double %2)
  %mrv = insertvalue { i64, i64 } poison, i64 %0, 0
  %mrv8 = insertvalue { i64, i64 } %mrv, i64 %1, 1
  ret { i64, i64 } %mrv8
}

declare void @___rzz(i64, i64, double)
